change the font

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       @import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
     </style>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&display=swap');
+    </style>
+    <style>
       *{
         margin: 0;
         padding: 0;
